# RoboBIM-Linux

./: .gitignore  11.txt  2023-09-06-17-32-55.bag  3ver.bag  ArRobot_ws.code-workspace  RoboBIM-Linux.code-workspace  frames.gv  go2.sh  input_lines.txt  krvadratL.gcode  lidar-in-0.bag  lidarPlace.sh  lidarPlace1.sh  lidarPlace2.sh  lidarPlace3.sh  lidarPlace4.sh  lidarPlace5.sh  pillar.bag  pos.sh  record1.sh  rosconsole copy.config  rosconsole.config  spi.sh  startData22.launch  startData23.launch  startPose1.launch  startPose2.launch  start_data.launch  start_node.launch  start_pillar_pose.launch  test.sh  testModeAll-10Hz.txt
1/head/: CMakeLists.txt  package.xml
1/head/src/: head_node.cpp
_primer/: config.cpp
bag/: 2ver_0.bag  new.bag
src/data/: CMakeLists.txt  CMakeLists2.txt  package.xml  package_old.xml  read.me  start.launch  startPose.launch  start_car.launch  start_head.launch  start_pillar.launch
src/data/msg/: PillarOut.msg  SControl.msg  SControlDriver.msg  SDriver2Data.msg  SLaserSend.msg  SLed.msg  SMotor.msg  Struct_AngleLaser.msg  Struct_Car.msg  Struct_Control.msg  Struct_Data2Driver.msg  Struct_Driver2Data.msg  Struct_Encoder.msg  Struct_IMU.msg  Struct_Info_SPI.msg  Struct_Joy.msg  Struct_Led.msg  Struct_Lidar.msg  Struct_ModulLidar.msg  Struct_ModulMicric.msg  Struct_ModulMotor.msg  Struct_Motor.msg  Struct_PoseLidar.msg  Struct_Sensor.msg  Struct_Spi.msg  data_driver_control.msg  data_driver_odometr.msg  pillar.msg  topicAngle.msg  topicPillar.msg
src/data/src/: MyClass.h  MyKalman.h  car_node.cpp  code.h  config.h  data2driver.h  data2iot.h  data_node.cpp  head_node.cpp  lib.h  pillar_node.cpp  startPose_node.cpp
src/data/src/data_code/: c_joy.h  code.h  config.h  data2driver.h  data2modul.h  topic.h
src/data/src/head_code/: c_joy.h  car.h  code.h  config.h  laser.h  low.h  pillar.h  position.h  topic.h
src/data/src/pillar_code/: code.h  config.h
src/head/: CMakeLists.txt
src/joy/: mainpage.dox
src/joy/src/: joy_node.cpp
src/my_msgs/msg/: Bme.msg  Control.msg  DataTimeMy.msg  Power.msg
src/pb/: CMakeLists.txt  balorobot.gcode  gen  gen.cpp  gen27.cpp  gen30.cpp  input_lines.txt  kvadratL.gcode  package.xml  startData22.launch  startData23.launch  startPose.launch  start_head.launch  start_pillar.launch
src/pb/bag/: lidar3030.bag  lidarOnPlace2.bag  lidarOnPlace3.bag
src/pb/gcode/: Ugol.gcode  balorobot 1 var.gcode  balorobot.gcode  balorobot24.gcode  gcodeAngle.gcode  gen.cpp  gen1312  input_lines.txt  konvert.gcode  konvertFast.gcode  konvertMini.gcode  konvert_xy.gcode  kvadrat--.gcode  kvadrat.gcode  kvadrat05.gcode  kvadrat1.gcode  kvadrat2l2xy.gcode  kvadrat50-0.gcode  kvadrat50-1.gcode  kvadrat50.gcode  kvadrat70.gcode  kvadrat700.gcode  kvadratL.gcode  kvadratR.gcode  line.gcode  line160.gcode  my_custom_gcode.gcode  test.gcode  tudaSuda.gcode  ugol.gcode  ugolL.gcode  ugolR.gcode  zigZag.gcode
src/pb/launch/: 1_startData.launch  2_startLidar.launch  2_startScan.launch  3_startPose.launch  4_startControl.launch  5_startScan.launch  pillar_pose.launch  startControl.launch  startData22.launch  startLidar2.launch  startLidar3.launch  startLidar_a3.launch  startPillar2.launch  startPose2.launch
src/pb/launch/-/: lidar_data.launch
src/pb/rviz/: Maket_01.rviz
src/pb/src/: calibr_node.cpp  chatgpt.cpp  config.yaml  control_node.cpp  data_node.cpp  deepseek.cpp  genStruct.h  grok.cpp  head_node.cpp  lidar_node.cpp  logi.h  pillar_node.cpp  pos_node.cpp  qween.cpp  read.me  scan_node.cpp  write_node.cpp
src/pb/src/control_code/: code.h  config.h  gCodeParser.h  grok.txt  jerk.h  l1Controller.h  my_custom_gcode.gcode  statistic.h  topic.h
src/pb/src/data_code/: c_joy.h  code.h  config.h  data2driver.h  data2modul.h  data2print.h  jerk.h  spiDriver.h  topic.h
src/pb/src/head_code/: MyKalman.h  code.h  config.h  dataNode.h  laser.h  low.h  pillar.h  topic.h
src/pb/src/lidar_code/: code.h  config.h  pillar.h  pillarDetector.h  topic.h  trilaterationSolver.h
src/pb/src/pillar_code/: config.h  pillar.h  pillarDetector.h  topic.h
src/pb/src/pos_code/: code.h  config.h  kalman.h  laser.h  localizer.h  pillar.h  topic.h
src/pb/src/scan_code/: chat.h  code.h  deep.h  gemeni.h  gemeni_2.h  gemeni_3.h  gemeni_3_1.h  grok.h  pillarScan.cpp  pillarScan.h  pillarScanNode.h  qween.h  trilaterationSolver.h
src/pb/src/scan_node/: chat.h  deep.h  gemeni.h  grok.h  qween.h
src/pb/src/write_code/: code.h  config.h  topic.h
src/pb_msgs/: CMakeLists.txt  package.xml  read.me
src/pb_msgs/msg/: Body.msg  Control.msg  SControlDriver.msg  SControlMotor.msg  SControlPrint.msg  SDriver2Data.msg  SFirmwareModul.msg  SIcm.msg  SLaserSend.msg  SLinAngVel.msg  SLinAngVel1.msg  SMode.msg  SModePoseBase.msg  SModul2Data.msg  SMpu.msg  SMwu.msg  SScan.msg  SSetSpeed.msg  STwistDt.msg  Struct_Data2Driver.msg  Struct_Data2Modul.msg  Struct_Data2Print.msg  Struct_Driver2Data.msg  Struct_Info_SPI.msg  Struct_Modul2Data.msg  Struct_Odom.msg  Struct_PoseBase.msg  Struct_PoseLidar.msg  Struct_PoseRotation copy.msg  Struct_PoseRotation.msg  Struct_PoseScan.msg  Struct_Print2Data.msg  pillar.msg  pointA.msg  topicPillar.msg
src/position/: package.xml
src/rplidar_ros/: CMakeLists.txt
src/rplidar_ros/launch/: rplidar_a3.launch  rplidar_s2.launch
src/rplidar_ros/src/: node.cpp
temp/: Ads1115.msg  ArRobot_ws.code-workspace  CMakeLists_old.txt  calibr_node.cpp  code.cpp  hector.launch  map.pgm  phoronix-test-suite_8.8.1_all.deb  pillar_node.cpp  ps4_script.txt  read_me.txt  startPose_node.cpp  start_head.launch  start_node.launch  start_node2.launch
temp/body/: CMakeLists.txt  package.xml
temp/body/src/: body_node.cpp  (+2 more)
temp/control/: CMakeLists.txt  package.xml
temp/head_2/: package.xml
temp/msg/: Odomet.msg  PillarOut.msg  SAngleLL.msg  SAngleLaserLidar.msg  SControl.msg  SControlModul.msg  SEncoder.msg  SEuler.msg  SLed.msg  SOdom.msg  SPoseTrue.msg  SSensor.msg  STwist.msg  Struct_Car.msg  Struct_Servo.msg  Struct_ServoOut.msg  Struct_StatusDriver.msg  pillar.msg
temp/my_msgs/: CMakeLists.txt
temp/position/: CMakeLists.txt
(+18 files in other folders)
